Version 6.8.3 - not yet released
* Kobo
  - support Kobo Glo HD
* Waypoints
  - use correct "comment" field for OziExplorer files
  - relax file format detection for OziExplorer files
* fix crash in XML parser

Version 6.8.2 - 2015/09/19
* Rubik R-26S polar
* user interface
  - save settings after copy&pasting an InfoBox set (#3649)
* map
  - fix crash in the topography renderer
* calculations
  - fix task progress display after finish achieved (#3657)
* devices
  - fix wrong baud rate after task declaration (#3654)
* Android
  - support the "escape" key (#3647)
  - fix all RS232 permissions on Android (#3648)
* Kobo
  - fix wrong IP address display (#3650)
* Raspberry Pi / Cubieboard
  - support digit and letter keys (#3611)

Version 6.8.1 - 2015/08/27
* fix freeze bug when starting without GPS fix
* fix crash with empty xcsoar-checklist.txt file
* devices
  - fix TCP port on Windows (#3428)
* Windows
  - fix the airspace file parser (#3633)
* Kobo
  - fix overlapping text (#3634)
* Android
  - fix USB-RS232-OTG permissions on Android

Version 6.8 - 2015/08/18
* data files
  - optimise the topography loader
  - faster RASP map change
  - show all RASP maps
  - fix comments in TNP files
  - ignore trailing whitespace in airspace files (#3546)
  - store user-edited waypoints and markers in "user.cup"
* devices
  - remove option "Ignore checksum"
  - CAI302: add sink tone configuration
  - LX: implement LXNAV Nano3 task declaration (#3295)
  - LX: remove support for LX1600 pass-through mode
  - ATR833: new driver
  - Volkslogger: support DAeC keyhole declaration
  - Westerboer VW921: remove buggy driver (#3215)
  - added TCP port 2000 to portlist (part of #3326)
  - support LXNAV V7 pass-through mode (#1913, #2808, #2919)
* calculations
  - wave assistant
  - use maximum speed configured in plane setup as limit for calculations
  - use WGS84 earth ellipsoid for distance calculations (#2809)
  - remove setting "Prefer external wind"
  - reduce EKF wind latency